chore: Finetuning the format of the xml-based testsuites.